--- a/addons/web/static/src/less/webclient_layout.less
+++ b/addons/web/static/src/less/webclient_layout.less
@@ -82,7 +82,10 @@ html {
                 display: block;
                 margin-left: 0;
             }
-            .o-control-panel {
+            .o-control-panel-first-row {
+                .o-flex(0, 0, auto);
+            }
+            .o-control-panel-second-row {
                 .o-flex(0, 0, auto);
                 z-index: @o-control-panel-zindex;
             }
