[EXPERIMENT] work on kanban view
reimplement kanban view. is it really a good idea?

--- a/addons/web_kanban/static/src/less/kanban_view.less
+++ b/addons/web_kanban/static/src/less/kanban_view.less
@@ -2,3 +2,29 @@
 .oe_kanban_vignette, .oe_kanban_content {
     background-color: white;
 }
+
+.o-kanban-view {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.o-kanban-record {
+    width: 328px;
+
+    .oe_kanban_image {
+      display: inline-block;
+      vertical-align: top;
+      width: 64px;
+      height: 64px;
+      text-align: center;
+      overflow: hidden;
+      -moz-border-radius: 3px;
+      -webkit-border-radius: 3px;
+      border-radius: 3px;
+      -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+      -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+      -box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+    }
+
+}
