[FIX] fix loading display indicator. too useful to be broken

--- a/addons/web/static/src/less/webclient.less
+++ b/addons/web/static/src/less/webclient.less
@@ -160,3 +160,12 @@
         }
     }
 }
+
+.o-loading {
+    background-color: @odoo-brand-primary;
+    color: white;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: 4px;
+}
