--- a/addons/hr_evaluation/views/hr_evaluation.xml
+++ b/addons/hr_evaluation/views/hr_evaluation.xml
@@ -9,7 +9,7 @@
     <template id="back_inherit" name="Survey" inherit_id="survey.back">
         <xpath expr="//div[@name='Back_to_survey']" position="inside">
             <t t-if="user_input and user_input.survey_res_id">
-                <a t-attf-href="/web#id=#{user_input.survey_res_id}&amp;view_type=form&amp;model=hr_evaluation.evaluation&amp;action=hr_evaluation.open_view_hr_evaluation_tree" class="btn btn-default">Back to Appraisal</a>
+                <a t-attf-href="/web#id=#{user_input.survey_res_id}&amp;view_type=form&amp;model=hr.evaluation&amp;action=hr_evaluation.open_view_hr_evaluation_tree" class="btn btn-default">Back to Appraisal</a>
             </t>
         </xpath>
     </template>
