--- a/addons/web/static/src/less/form_view.less
+++ b/addons/web/static/src/less/form_view.less
@@ -6,7 +6,9 @@
         max-width: 860px;
         margin-top: 8px;
         background-color: white;
+        box-shadow: 0px 0px 2px 1px @odoo-main-text-color;
         .center-block();
+        padding: 8px;
     }
 
     header {
