FormView actions buttons style + template cleaned

--- a/addons/web/static/src/less/utils.less
+++ b/addons/web/static/src/less/utils.less
@@ -75,3 +75,7 @@
     -ms-flex: @flex-grow @flex-schrink @flex-basis;
     flex: @flex-grow @flex-schrink @flex-basis;
 }
+
+.o-darken-background(@color) {
+    background-color: darken(@color, 10%);
+}
