--- a/addons/web/static/src/less/control_panel.less
+++ b/addons/web/static/src/less/control_panel.less
@@ -5,17 +5,12 @@
     min-width: @oe-search-options-dropdown-min-width;
 }
 
-
 .o-control-panel-first-row, .o-control-panel-second-row {
     // FIXME: override bootstrap
     .btn {
         border-radius: 0px;
         border-style: none;
         color: @odoo-main-text-color;
-    }
-    .btn-primary {
-        text-transform: uppercase;
-        color: white;
     }
 }
 
@@ -157,9 +152,20 @@
     }
 
     // Action buttons
-    .o-cp-buttons button {
-        background-color: @odoo-brand-optional;
-        border-color: @odoo-brand-optional;
+    .o-cp-buttons {
+        // Override bootstrap
+        button.btn-primary {
+            text-transform: uppercase;
+            color: white;
+            background-color: @odoo-brand-optional;
+            &:hover {
+                .o-darken-background(@odoo-brand-optional);
+            }
+        }
+        button.btn-default {
+            text-transform: uppercase;
+            color: @odoo-brand-optional;
+        }
     }
     .oe_list_buttons {.oe_list_save, .oe_list_discard {display: none;}}  // Needed by the webclient
     // FIXME: Move me to view_list.less
