Breadcrumbds style hover: darken instead of underline

--- a/addons/web/static/src/less/control_panel.less
+++ b/addons/web/static/src/less/control_panel.less
@@ -26,6 +26,10 @@
         a {
             color: @odoo-brand-optional;
             cursor: pointer;
+            &:hover {
+                .o-darken(@odoo-brand-optional);
+                text-decoration: none;
+            }
         }
     }
 
