--- a/addons/web/static/src/less/utils.less
+++ b/addons/web/static/src/less/utils.less
@@ -76,6 +76,9 @@
     flex: @flex-grow @flex-schrink @flex-basis;
 }
 
+.o-darken(@color) {
+    color: darken(@color, 10%);
+}
 .o-darken-background(@color) {
     background-color: darken(@color, 10%);
 }
