--- a/addons/web_editor/static/src/css/editor.sass
+++ b/addons/web_editor/static/src/css/editor.sass
@@ -367,6 +367,7 @@
         top: 1px !important
         right: auto !important
         left: 300px !important
+        margin-top: 0 !important
         border: 0
         background: transparent
         box-shadow: none
@@ -376,7 +377,6 @@
         text-align: left
         white-space: normal
         border-radius: 6px
-        margin-top: 0
         max-width: none
         .popover-content
             padding: 0
