--- a/addons/website/views/website_templates.xml
+++ b/addons/website/views/website_templates.xml
@@ -185,8 +185,8 @@
 
 <template id="editor_head" inherit_id="website.layout" name="Editor" groups="base.group_website_publisher">
     <xpath expr='//t[@t-call-assets="website.assets_frontend"]' position="before">
-        <t groups="base.group_website_designer" t-call="web_editor.summernote"/>
-        <t groups="base.group_website_designer" t-call="web_editor.editor"/>
+        <t groups="base.group_website_designer" t-call-assets="web_editor.summernote"/>
+        <t groups="base.group_website_designer" t-call-assets="web_editor.editor"/>
     </xpath>
     <xpath expr='//t[@t-call-assets="website.assets_frontend"]' position="after">
         <t t-call-assets="website.assets_editor"/>
