--- a/addons/web_editor/static/src/css/editor.sass
+++ b/addons/web_editor/static/src/css/editor.sass
@@ -84,6 +84,10 @@
             &+.dropdown-toggle
                 padding-left: 8px
                 padding-right: 8px
+            &.active
+                color: #333
+                background-color: #e6e6e6
+                border-color: #adadad
         .btn+.btn, .btn+.btn-group, +.btn, +.btn-group
             margin-left: -1px
     .btn-link
