ListView actions buttons + templates cleaned
ControlPanel template for second row changed: col-md-6 replaced by  2 col-md-3

--- a/addons/base_import/static/src/css/import.css
+++ b/addons/base_import/static/src/css/import.css
@@ -68,10 +68,7 @@
 
 /* ----------- INITIAL SETUP ------------ */
 
-.openerp .oe_list_buttons .oe_alternative {
-    visibility: visible;
-}
-.openerp .oe_list_buttons.oe_editing .oe_list_button_import {
+.o-list-buttons.o-editing .o-list-button-import {
     display: none;
 }
 
