--- a/addons/web/static/src/less/webclient.less
+++ b/addons/web/static/src/less/webclient.less
@@ -21,12 +21,14 @@
 @breadcrumb-bg: white;
 @component-active-bg: @gray-lighter;
 @component-active-color: @odoo-brand-optional;
+@font-family-sans-serif: Roboto;
+@font-family-serif: Roboto;
+@font-family-monospace: Roboto;
 @nav-link-padding: 5px 20px 5px 20px;
 @navbar-inverse-bg: @odoo-brand-primary;
 @navbar-inverse-link-color: white;
 @navbar-inverse-link-hover-bg: darken(@odoo-brand-primary, 10%);
 @text-color: @odoo-main-text-color;
-
 
 // ------------------------------------------------------------------
 // Layout
