--- a/addons/rating/views/rating_template.xml
+++ b/addons/rating/views/rating_template.xml
@@ -1,6 +1,106 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
     <data>
+
+        <!-- Bundle for Rating Widget (in assets common to be used in website modules) -->
+        <template id="assets_common" inherit_id="web.assets_common" name="Rating common assets">
+            <xpath expr='.' position="inside">
+                <script src="/rating/static/src/js/rating.js"></script>
+                <link href="/rating/static/src/css/rating.css" rel="stylesheet"/>
+            </xpath>
+        </template>
+
+
+        <!-- Rating Star Widget (Generic widget)
+            :param String rating_input_name : the name of the input field to send the rating
+            :param Float rating_default_value : the rate to initialize the widget with
+            :param Boolean rating_disabled : is the widget disabled (False), or it is just used to display information (True). Default value is False
+            :param Boolean rating_half_star_enabled : allow to use half star on the widget. Default is False.
+        -->
+        <template id="rating_star_card" name="Rating Star Widget">
+            <div class="o_rating_star_card">
+                <div t-attf-class="stars #{rating_disabled and 'disabled' or 'enabled'}">
+                    <i class="fa fa-star-o"></i>
+                    <i class="fa fa-star-o"></i>
+                    <i class="fa fa-star-o"></i>
+                    <i class="fa fa-star-o"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <div t-if="not rating_disabled" class="rate_text">
+                    <span class="label label-info"></span>
+                </div>
+            <input type="hidden" readonly="readonly"
+                t-att-name="rating_input_name or 'rating'"
+                t-att-data-default="rating_default_value or 0.0"
+                t-att-data-is_disabled="rating_disabled and 1 or 0"
+                t-att-data-half_star_enabled="rating_half_star_enabled and 1 or 0"/>
+            </div>
+        </template>
+
+        <!-- Rating card : display the result (avg, total, ...) for rating
+            :param dict rating_stat : a dictionnary with
+                    'avg' : containing the rating note average
+                    'total' : the number of rating for the object
+                    'percent' : a dict where the key is each possible rate, and the value is
+                                the percent of rating havingthis rate.
+            :param float max_rate : the upper bound of the rate to display (in the popover)
+            :param float min_rate : the lower bound of the rate to display (in the popover)
+        -->
+        <template id="rating_card" name="Rating Card">
+            <div class="row o_rating_card">
+                <div class="col-xs-12 col-md-12 text-center">
+                    <div class="well well-sm">
+                        <h1 class="rating-num"
+                            data-placement="top"
+                            data-popover-selector=".rating_popover"
+                            data-toggle="rating-popover">
+                            <t t-esc="rating_stat.get('avg', 0.0)"/>
+                        </h1>
+                        <div class="rating"
+                            data-placement="top"
+                            data-popover-selector=".rating_popover"
+                            data-toggle="rating-popover">
+                            <t t-call="rating.rating_star_card">
+                                <t t-set="rating_default_value" t-value="rating_stat.get('avg', 0.0)"/>
+                                <t t-set="rating_disabled" t-value="True"/>
+                            </t>
+                        </div>
+                        <div>
+                            <i class="fa fa-user"/> <t t-esc="rating_stat.get('total')"/>
+                        </div>
+                        <!-- the popover core -->
+                        <div class="popover rating_popover rating-popover" role="tooltip">
+                            <div class="arrow"></div>
+                            <div class="popover-content rating-popover-content">
+                                <t t-foreach="rating_stat.get('percent')" t-as="percent">
+                                    <t t-if="min_rate &lt;= percent and percent &lt;= max_rate">
+                                        <div class="progress" style="width:200px;">
+                                            <div class="progress-bar progress-bar-warning" role="progressbar"
+                                                aria-valuemin="0"
+                                                aria-valuemax="100"
+                                                t-att-aria-valuenow="rating_stat['percent'][percent]"
+                                                t-attf-style="width: #{rating_stat['percent'][percent]}%">
+                                            <span class="sr-only">
+                                                <t t-esc="rating_stat['percent'][percent]"/>%
+                                              </span>
+                                            </div>
+                                            <span class="progress-type">
+                                                <t t-esc="percent"/> <i class="fa fa-star"/>
+                                            </span>
+                                            <span class="progress-completed">
+                                                <t t-esc="rating_stat['percent'][percent]"/>%
+                                            </span>
+                                        </div>
+                                    </t>
+                                </t>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </template>
+
+        <!-- External page : thanks message -->
         <template id="rating_external_page_view">
             <head>
                 <link rel='stylesheet' href='/web/static/lib/bootstrap/css/bootstrap.css'/>
@@ -16,5 +116,6 @@
                 <h1>Sorry you have already voted !</h1>
             </div>
         </template>
+
     </data>
 </openerp>
