DiagramView action buttons, switch button and breadcrumb

--- a/addons/web/static/src/less/control_panel.less
+++ b/addons/web/static/src/less/control_panel.less
@@ -6,25 +6,6 @@
 }
 
 .o-control-panel-first-row, .o-control-panel-second-row {
-    // Dropdowns
-    li {
-        position: relative;
-        a {
-            padding: 3px 25px;
-        }
-        &.selected {
-            > a {
-                font-weight: bold;
-                &:before {
-                    font-family: FontAwesome;
-                    position: absolute;
-                    left: 6px;
-                    content: "\f00c";
-                }
-            }
-        }
-    }
-
     // FIXME: override bootstrap
     .btn {
         border-radius: 0px;
@@ -164,6 +145,25 @@
 
 .o-control-panel-second-row {
     padding: 0px 0px 10px 0px;
+
+    // Dropdowns
+    li {
+        position: relative;
+        a {
+            padding: 3px 25px;
+        }
+        &.selected {
+            > a {
+                font-weight: bold;
+                &:before {
+                    font-family: FontAwesome;
+                    position: absolute;
+                    left: 6px;
+                    content: "\f00c";
+                }
+            }
+        }
+    }
 
     .o-buttons-col {
         height: 30px;
@@ -313,6 +313,7 @@
         .o-cp-switch-calendar:before {content: "\f073";}
         .o-cp-switch-gantt:before {content: "\f0ae";}
         .o-cp-switch-pivot:before {content: "\f0ce";}
+        .o-cp-switch-diagram:before {content: "";}
     }
 }
 
