mail: make it suck less

--- a/addons/web_kanban/static/src/less/kanban_view.less
+++ b/addons/web_kanban/static/src/less/kanban_view.less
@@ -16,6 +16,7 @@
     background-color: white;
     margin: 8px;
     box-shadow: 0px 0px 2px 1px @odoo-main-text-color;
+    overflow: hidden;
 
     .oe_kanban_image {
       display: inline-block;
