--- a/addons/mail/views/mail.xml
+++ b/addons/mail/views/mail.xml
@@ -3,9 +3,12 @@
     <data>
         <template id="assets_backend" name="mail assets" inherit_id="web.assets_backend">
             <xpath expr="." position="inside">
-                <link rel="stylesheet" href="/mail/static/src/css/mail.css"/>
+                <link rel="stylesheet" href="/mail/static/src/less/mail.less"/>
+
+<!--                 <link rel="stylesheet" href="/mail/static/src/css/mail.css"/>
                 <link rel="stylesheet" href="/mail/static/src/css/mail_group.css"/>
                 <link rel="stylesheet" href="/mail/static/src/css/announcement.css"/>
+ -->
                 <script type="text/javascript" src="/mail/static/src/js/mail.js"></script>
                 <script type="text/javascript" src="/mail/static/src/js/mail_utils.js"></script>
                 <script type="text/javascript" src="/mail/static/src/js/mail_followers.js"></script>
