GanttView action buttons + templates cleaned

--- a/addons/web_gantt/static/src/less/gantt.less
+++ b/addons/web_gantt/static/src/less/gantt.less
@@ -1,10 +1,9 @@
 
-.oe_gantt {
+.o-gantt-view {
     min-height: 500px;
-}
 
-.oe_gantt > div > table {
-    background-color: white;
-    box-shadow: 0px 0px 2px 1px @odoo-main-text-color;
+	> div > table {
+	    background-color: white;
+	    box-shadow: 0px 0px 2px 1px @odoo-main-text-color;
+	}
 }
-
