--- a/addons/website_quote/views/report_quotation.xml
+++ b/addons/website_quote/views/report_quotation.xml
@@ -9,6 +9,7 @@
                     <t t-foreach="docs" t-as="quotation">
                         <div class="page">
                             <t t-call="website_quote.so_quotation_content"/>
+                            <t t-call="website_quote.optional_products"/>
                         </div>
                     </t>
                 </t>
