--- a/addons/hr_evaluation/views/hr_evaluation_view.xml
+++ b/addons/hr_evaluation/views/hr_evaluation_view.xml
@@ -29,7 +29,7 @@
                         <field name="department_id" attrs="{'readonly':[('state','not in',('new'))]}"/>
                         <field name="interview_deadline"/>
                         <field name="date_close" attrs="{'readonly':[('state','in', ('pending','done'))]}"/>
-                        <field name="mail_template_id" attrs="{'readonly':[('state','not in',('new'))]}"/>
+                        <field name="mail_template_id" attrs="{'readonly':[('state','not in',('new'))]}" groups="base.group_no_one"/>
                         <field name="meeting_id" invisible="True"/>
                         <field name="company_id" invisible="True"/>
                     </group>
@@ -46,26 +46,26 @@
                                     <field name="manager" attrs="{'readonly':[('state','not in',('new'))]}"/>
                                     <label string="Managers"/>
                                 </div>
-                                <field name="manager_ids" nolabel="1" placeholder="Select Appraisal Reviewer..." widget="many2many_tags" attrs="{'invisible':[('manager','=',False)], 'required':[('manager','=',True)], 'readonly':[('state','not in',('new'))]}"/>
-                                <field name="manager_survey_id" nolabel="1" placeholder="Appraisal Form..." attrs="{'invisible':[('manager','=',False)], 'required':[('manager','=',True)], 'readonly':[('state','not in',('new'))]}"/>
+                                <field name="manager_ids" nolabel="1" placeholder="Select Appraisal Reviewer..." widget="many2many_tags" attrs="{'invisible':[('manager','=',False)], 'readonly':[('state','not in',('new'))]}"/>
+                                <field name="manager_survey_id" nolabel="1" placeholder="Appraisal Form..." attrs="{'invisible':[('manager','=',False)], 'readonly':[('state','not in',('new'))]}"/>
                                 <div class="address_format">
                                     <field name="appraisal_self" attrs="{'readonly':[('state','not in',('new'))]}"/>
                                     <label string="Employee"/>
                                 </div>
                                 <field name="appraisal_employee" nolabel="1" attrs="{'invisible':[('appraisal_self','=',False)], 'readonly':[('state','not in',('new'))]}"/>
-                                <field name="appraisal_self_survey_id" nolabel="1" placeholder="Appraisal Form..." attrs="{'invisible':[('appraisal_self','=',False)], 'required':[('appraisal_self','=',True)], 'readonly':[('state','not in',('new'))]}"/>
+                                <field name="appraisal_self_survey_id" nolabel="1" placeholder="Appraisal Form..." attrs="{'invisible':[('appraisal_self','=',False)], 'readonly':[('state','not in',('new'))]}"/>
                                 <div class="address_format">
                                     <field name="subordinates" attrs="{'readonly':[('state','not in',('new'))]}"/>
                                     <label string="Collaborators"/>
                                 </div>
-                                <field name="subordinates_ids" nolabel="1" placeholder="Select Appraisal Reviewer..." widget="many2many_tags" attrs="{'invisible':[('subordinates','=',False)], 'required':[('subordinates','=',True)], 'readonly':[('state','not in',('new'))]}"/>
-                                <field name="subordinates_survey_id" nolabel="1" placeholder="Appraisal Form..." attrs="{'invisible':[('subordinates','=',False)], 'required':[('subordinates','=',True)], 'readonly':[('state','not in',('new'))]}"/>
+                                <field name="subordinates_ids" nolabel="1" placeholder="Select Appraisal Reviewer..." widget="many2many_tags" attrs="{'invisible':[('subordinates','=',False)], 'readonly':[('state','not in',('new'))]}"/>
+                                <field name="subordinates_survey_id" nolabel="1" placeholder="Appraisal Form..." attrs="{'invisible':[('subordinates','=',False)], 'readonly':[('state','not in',('new'))]}"/>
                                 <div class="address_format">
                                     <field name="colleagues" attrs="{'readonly':[('state','not in',('new'))]}"/>
                                     <label string="Colleagues"/>
                                 </div>
-                                <field name="colleagues_ids" nolabel="1" placeholder="Select Appraisal Reviewer..." widget="many2many_tags" attrs="{'invisible':[('colleagues','=',False)], 'required':[('colleagues','=',True)], 'readonly':[('state','not in',('new'))]}"/>
-                                <field name="colleagues_survey_id" nolabel="1" placeholder="Appraisal Form..." attrs="{'invisible':[('colleagues','=',False)], 'required':[('colleagues','=',True)], 'readonly':[('state','not in',('new'))]}"/>
+                                <field name="colleagues_ids" nolabel="1" placeholder="Select Appraisal Reviewer..." widget="many2many_tags" attrs="{'invisible':[('colleagues','=',False)], 'readonly':[('state','not in',('new'))]}"/>
+                                <field name="colleagues_survey_id" nolabel="1" placeholder="Appraisal Form..." attrs="{'invisible':[('colleagues','=',False)], 'readonly':[('state','not in',('new'))]}"/>
                             </group>
                         </group>
                     </page>
@@ -217,26 +217,26 @@
 	                        <field name="appraisal_manager"/>
 	                        <label string="Managers"/>
 	                    </div>
-	                    <field name="appraisal_manager_ids" nolabel="1" placeholder="Select Appraisal Reviewer..." widget="many2many_tags" attrs="{'invisible':[('appraisal_manager','=',False)], 'required':[('appraisal_manager','=',True)]}" readonly="0"/>
-	                    <field name="appraisal_manager_survey_id" nolabel="1" placeholder="Appraisal Form..." attrs="{'invisible':[('appraisal_manager','=',False)], 'required':[('appraisal_manager','=',True)]}"/>
+	                    <field name="appraisal_manager_ids" nolabel="1" placeholder="Select Appraisal Reviewer..." widget="many2many_tags" attrs="{'invisible':[('appraisal_manager','=',False)]}" readonly="0"/>
+	                    <field name="appraisal_manager_survey_id" nolabel="1" placeholder="Appraisal Form..." attrs="{'invisible':[('appraisal_manager','=',False)]}"/>
 	                    <div class="address_format">
 	                        <field name="appraisal_self"/>
 	                        <label string="Employee"/>
 	                    </div>
 	                    <field name="appraisal_employee" nolabel="1" attrs="{'invisible':[('appraisal_self','=',False)]}"/>
-	                    <field name="appraisal_self_survey_id" nolabel="1" placeholder="Appraisal Form..." attrs="{'invisible':[('appraisal_self','=',False)], 'required':[('appraisal_self','=',True)]}"/>
+	                    <field name="appraisal_self_survey_id" nolabel="1" placeholder="Appraisal Form..." attrs="{'invisible':[('appraisal_self','=',False)]}"/>
 	                    <div class="address_format">
 	                        <field name="appraisal_subordinates"/>
 	                        <label string="Collaborators"/>
 	                    </div>
-	                    <field name="appraisal_subordinates_ids" nolabel="1" placeholder="Select Appraisal Reviewer..." widget="many2many_tags" attrs="{'invisible':[('appraisal_subordinates','=',False)], 'required':[('appraisal_subordinates','=',True)]}"/>
-	                    <field name="appraisal_subordinates_survey_id" nolabel="1" placeholder="Appraisal Form..." attrs="{'invisible':[('appraisal_subordinates','=',False)], 'required':[('appraisal_subordinates','=',True)]}"/>
+	                    <field name="appraisal_subordinates_ids" nolabel="1" placeholder="Select Appraisal Reviewer..." widget="many2many_tags" attrs="{'invisible':[('appraisal_subordinates','=',False)]}"/>
+	                    <field name="appraisal_subordinates_survey_id" nolabel="1" placeholder="Appraisal Form..." attrs="{'invisible':[('appraisal_subordinates','=',False)]}"/>
 	                    <div class="address_format">
 	                        <field name="appraisal_colleagues"/>
 	                        <label string="Colleagues"/>
 	                    </div>
-	                    <field name="appraisal_colleagues_ids" nolabel="1" placeholder="Select Appraisal Reviewer..." widget="many2many_tags" attrs="{'invisible':[('appraisal_colleagues','=',False)], 'required':[('appraisal_colleagues','=',True)]}" readonly="0"/>
-	                    <field name="appraisal_colleagues_survey_id" placeholder="Appraisal Form..." nolabel="1" attrs="{'invisible':[('appraisal_colleagues','=',False)], 'required':[('appraisal_colleagues','=',True)]}"/>
+	                    <field name="appraisal_colleagues_ids" nolabel="1" placeholder="Select Appraisal Reviewer..." widget="many2many_tags" attrs="{'invisible':[('appraisal_colleagues','=',False)]}" readonly="0"/>
+	                    <field name="appraisal_colleagues_survey_id" placeholder="Appraisal Form..." nolabel="1" attrs="{'invisible':[('appraisal_colleagues','=',False)]}"/>
 	                </group>
 	            </group>
 	            <group string="Periodicity" col="5">
