--- a/addons/payment/views/res_partner_view.xml
+++ b/addons/payment/views/res_partner_view.xml
@@ -8,9 +8,17 @@
                 <field name="model">res.partner</field>
                 <field name="inherit_id" ref="base.view_partner_form"/>
                 <field name="arch" type="xml">
-                    <xpath expr='//group/field[@name="supplier"]' position="after">
-                        <field name="default_payment_method_id" groups="base.group_sale_salesman"/>
-                        <field name="payment_method_ids" groups="base.group_sale_salesman"/>
+                    <xpath expr='//group[@name="purchase"]' position="after">
+                        <group string="Payment" colspan="2">
+                            <field name="default_payment_method_id" groups="base.group_sale_salesman"/>
+                            <field name="payment_method_ids" groups="base.group_sale_salesman">
+                                <tree editable="bottom" create="false">
+                                    <field name="name"/>
+                                    <field name="acquirer_id" readonly="1"/>
+                                    <field name="acquirer_ref" readonly="1"/>
+                                </tree>
+                            </field>
+                        </group>
                     </xpath>
                 </field>
         </record>
