--- a/addons/payment_ogone/views/ogone.xml
+++ b/addons/payment_ogone/views/ogone.xml
@@ -53,5 +53,37 @@
             </form>
         </template>
 
+        <template id="ogone_s2s_form">
+            <form method="post" action="/payment/ogone/s2s/create">
+                <div class="row">
+                    <div class="form-group col-sm-8">
+                        <label class="control-label" for="cc_number">Card number</label>
+                        <input type="tel" name="cc_number" id="cc_number" class="form-control" placeholder="&#8226;&#8226;&#8226;&#8226;&#32;&#8226;&#8226;&#8226;&#8226;&#32;&#8226;&#8226;&#8226;&#8226;&#32;&#8226;&#8226;&#8226;&#8226;&#32;"/>
+                        <div class="card_placeholder"></div>
+                        <div class="visa"></div>
+                        <input type="hidden" name="cc_brand" value=""/>
+                    </div>
+                    <div class="form-group col-sm-4">
+                        <label class="control-label" for="cc_cvc">Card code</label>
+                        <input type="text" name="cc_cvc" id="cc_cvc" class="form-control" maxlength="4" placeholder="CVC"/>
+                    </div>
+                    <div class="form-group col-sm-7">
+                        <label class="control-label" for="cc_holder_name">Holder Name</label>
+                        <input type="text" name="cc_holder_name" id="cc_holder_name" class="form-control"/>
+                    </div>
+                    <div class="form-group col-sm-5">
+                        <label class="control-label" for="cc_expires_mm">Expires</label>
+                        <input type="text" name="cc_expiry" id="cc_expiry" class="form-control" maxlength="7" placeholder="MM / YY"/>
+                    </div>
+                    <input type="hidden" name="acquirer_id" t-att-value="id"/>
+                    <input t-if="return_success" type="hidden" name="return_success" t-att-value="return_success"/>
+                    <input t-if="return_fail" type="hidden" name="return_fail" t-att-value="return_fail"/>
+                    <input t-if="partner_id" type="hidden" name="partner_id" t-att-value="partner_id"/>
+                    <div class="clearfix"/>
+                </div>
+                <button class="btn btn-primary pull-right" type="submit">Confirm <span class="fa fa-long-arrow-right"></span></button>
+            </form>
+        </template>
+
     </data>
 </openerp>
