[FIX] account_payment: amount is always positive

--- a/addons/account/views/account_payment_view.xml
+++ b/addons/account/views/account_payment_view.xml
@@ -216,7 +216,7 @@
 
         <act_window
             id="action_account_payment_from_invoices"
-            name="Register Payments"
+            name="Register Payment"
             res_model="account.register.payments"
             src_model="account.invoice"
             view_mode="form"
